--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/j-/quine-mccluskey#readme",
   "devDependencies": {
+    "number-digits": "^0.1.0",
     "typescript": "^2.1.6"
   }
 }
