--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc && ava"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/j-/quine-mccluskey#readme",
   "devDependencies": {
+    "ava": "^0.18.1",
     "number-digits": "^0.1.0",
     "typescript": "^2.1.6"
   }
