--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es5",
     "noImplicitAny": false,
     "sourceMap": false,
-    "outDir": "dist"
+    "outDir": "dist",
+    "declaration": true
   }
 }
