Add NYC for code coverage

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "tsc && ava"
+    "coverage": "nyc report --reporter=text-html",
+    "test": "tsc && nyc ava"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "ava": "^0.18.1",
     "number-digits": "^0.1.0",
+    "nyc": "^10.1.2",
     "typescript": "^2.1.6"
   }
 }
