--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "docs": "typedoc --out docs/",
-    "coverage": "nyc report --reporter=text-html",
+    "coverage": "nyc report --reporter=html",
     "test": "tsc && nyc ava"
   },
   "repository": {
