--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,6 @@ root = true
 indent_style = tab
 tab_width = 4
 
-[*.json]
-indent_style = spaces
-tab_width = 2
+[*.{json,yml}]
+indent_style = space
+indent_size = 2
