--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "docs": "typedoc --out docs/",
+    "docs": "typedoc --out docs/ --name Quine–McCluskey --gaID UA-19913873-7",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "coverage-html": "nyc report --reporter=html",
     "test": "tsc && nyc ava"
